--- a/app/views/mainmenus/index.html.erb
+++ b/app/views/mainmenus/index.html.erb
@@ -47,5 +47,7 @@
     </td>
   </tr>
 </table>
-<div><%= form.submit %></div>
+<div><%= form.submit "新規登録"%></div>
 <% end %>
+
+<div class="toolbar"><%= link_to "<<Top", :root %></div>
