--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,23 +1,23 @@
-<% @page_title = "カート内容" %>
+<% @page_title = "カート内情報" %>
 <h1><%= @page_title %></h1>
 
-<% if @ordeers.present? %>
+<% if @order.present? %>
   <table class="list">
     <thead>
       <tr>
-        <th>アカウント名</th>
-        <th>氏名</th>
+        <th>メインメニュー</th>
+        <th>サイドメニュー</th>
       </tr>
     </thead>
     <tbody>
-      <% @members.each do |member| %>
-        <tr>
-          <td><%= link_to member.name, member %></td>
-          <td><%= member.fullname %></td>
-        </tr>
-      <% end %>
+      <tr>
+        <td><%= "メインメニュー" %></td>
+        <td><%= @order.sidemenus.pluck(:name) %></td>
+      </tr>
     </tbody>
   </table>
 <% else %>
-  <p>会員情報がありません。</p>
+  <p>カート内情報がありません。</p>
 <% end %>
+
+<div><%= link_to "注文ボタン", edit_order_path(@order) %></div>
