管理者ページの中身

--- a/app/views/admin/administrators/index.html.erb
+++ b/app/views/admin/administrators/index.html.erb
@@ -1,9 +1,9 @@
 <h2>管理者ページ</h2>
 
 <ul>
-	<li><%= link_to "会員一覧", "#" %></li>
-	<li><%= link_to "トッピング一覧", "#" %></li>
-	<li><%= link_to "メインメニュー一覧", "#" %></li>
-  <li><%= link_to "サイドメニュー一覧", "#" %></li>
+	<li><%= link_to "会員一覧", :admin_members %></li>
+	<li><%= link_to "トッピング一覧", :admin_toppings %></li>
+	<li><%= link_to "メインメニュー一覧", :admin_mainmenus %></li>
+  <li><%= link_to "サイドメニュー一覧", :admin_sidemenus %></li>
 	<li><%= link_to "オーダー管理", "#" %></li>
 </ul>
