--- a/app/views/admin/sidemenus/index.html.erb
+++ b/app/views/admin/sidemenus/index.html.erb
@@ -1,8 +1,31 @@
+<% @page_title = "サイドメニュー一覧" %>
+<h1><%= @page_title %></h1>
+
+<% if @sidemenus.present? %>
+  <table class="list">
+    <thead>
+      <tr>
+        <th>サイドメニュー名</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @sidemenus.each do |sidemenu| %>
+        <tr>
+          <td><%= link_to sidemenu.name, [:admin, sidemenu] %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <p>サイドメニュー情報がありません。</p>
+<% end %>
+
+
 <% @page_title = "サイドメニューの新規作成" %>
 
 <h1><%= @page_title %></h1>
 
-<%= form_for @sidemenu do |form| %>
+<%= form_for [:admin, @sidemenu] do |form| %>
 <table class="attr">
   <tr>
     <th><%= form.label :name, "サイドメニュー名" %></th>
@@ -24,7 +47,7 @@
     </td>
   </tr>
 </table>
-<div><%= form.submit %></div>
+<div><%= form.submit "サイドメニュー新規登録"%></div>
 <% end %>
 
-<div class="toolbar"><%= link_to "サイドメニュー一覧に戻る", sidemenus_path %></div>
+<div class="toolbar"><%= link_to "<<管理者topへ", :admin_administrators %></div>
