--- a/app/views/mainmenus/show.html.erb
+++ b/app/views/mainmenus/show.html.erb
@@ -2,7 +2,6 @@
 
 <h1><%= @page_title %></h1>
 
-<div class="toolbar"><%= link_to "削除", @mainmenu, method: :delete, data: {confirm: "本当に削除しますか？"} %></div>
 <div class="toolbar"><%= link_to "トッピングの追加", edit_mainmenu_path(@mainmenu) %></div>
 
 <table class="attr">
@@ -24,16 +23,5 @@
     <td><%= topping.name %></td>
     <% end %>
   </tr>
-  <%= form_for @mainmenu do |form| %>
-  <tr>
-    <th>おすすめ</th>
-    <td>
-      <%= form.check_box :recommend %>
-      <%= form.label :recommend, "おすすめ" %>
-    </td>
-  </tr>
-</table>
-<div><%= form.submit "オススメ登録" %></div>
-<% end %>
 
-<div class="toolbar"><%= link_to "<<メインメニュー一覧に戻る", mainmenus_path %></div>
+<div class="toolbar"><%= link_to "<<Topへ", :root %></div>
