--- a/app/views/mainmenus/index.html.erb
+++ b/app/views/mainmenus/index.html.erb
@@ -10,8 +10,9 @@
     </thead>
     <tbody>
       <% @mainmenus.each do |mainmenu| %>
+      <% product = mainmenu.products %>
         <tr>
-          <td><%= link_to mainmenu.name, mainmenu %></td>
+          <td><%= link_to mainmenu.name, mainmenu_product_path(mainmenu, product) %></td>
         </tr>
       <% end %>
     </tbody>
