--- a/app/views/mainmenus/show.html.erb
+++ b/app/views/mainmenus/show.html.erb
@@ -17,11 +17,6 @@
     <th>サイズ</th>
     <td><%= @mainmenu.size %></td>
   </tr>
-  <tr>
-    <th>トッピング</th>
-    <% @mainmenu.toppings.each do |topping| %>
-    <td><%= topping.name %></td>
-    <% end %>
-  </tr>
 
-<div class="toolbar"><%= link_to "<<Topへ", :root %></div>
+<div><%= link_to "カートへ追加", new_mainmenu_product_path(@mainmenu) %></div>
+<div><%= link_to "<<Topへ", :root %></div>
