--- a/app/views/mainmenus/index.html.erb
+++ b/app/views/mainmenus/index.html.erb
@@ -11,15 +11,15 @@
     <tbody>
       <% @mainmenus.each do |mainmenu| %>
         <tr>
-          <% if Product.find_by(id: mainmenu.id).present? %>
-            <% @product = Product.find(mainmenu.id) %>
-          <% else %>
+          <%# <% if Product.find_by(id: mainmenu.id).present? %> %>
+            <%# <% @product = Product.find(mainmenu.id) %> %>
+          <%# <% else %> %>
             <% @product = Product.new %>
             <% @product.mainmenu = mainmenu %>
             <% @product.price = mainmenu.price %>
-            <% @product.id = mainmenu.id %>
+            <%# <% @product.id = mainmenu.id %> %>
             <% @product.save %>
-          <% end %>
+          <%# <% end %> %>
           <td><%= link_to mainmenu.name, product_path(@product) %></td>
         </tr>
       <% end %>
