--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -26,13 +26,23 @@
 <ul>
 	<li><%= link_to "メインメニュー一覧", mainmenus_path %></li>
   <li><%= link_to "サイドメニュー一覧", sidemenus_path %></li>
-	<li><%= link_to "カート", orders_path %></li>
   <% unless current_member %>
-	 <li><%= link_to "ログイン", edit_session_path %></li>
+    <li><%= link_to "カート", "#" %></li>
+	  <li><%= link_to "ログイン", edit_session_path %></li>
   <% end %>
   <% if current_member %>
-    <% member = current_member %>
-	   <li><%= link_to "マイアカウントページ", edit_member_path(member) %></li>
+    <% "ログインしていて、既にカートへ何かしら入れてorderがnewされている人"%>
+    <% if Order.find_by(member_id: current_member.id, cart: false).present? %>
+      <% @order = Order.find_by(member_id: current_member.id, cart: false) %>
+    <% "ログインしているが、カート自体をまだnewしていない人"%>
+    <% else %>
+      <% @order = Order.new %>
+      <% @order.member = current_member %>
+      <% @order.id = current_member.id %>
+      <% @order.save! %>
+    <% end %>
+    <li><%= link_to "カート", order_path(@order) %></li>
+	  <li><%= link_to "マイアカウントページ", edit_member_path(current_member) %></li>
   <% end %>
 	<li><%= link_to "新規会員登録", new_member_path %></li>
 </ul>
