--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,7 +1,7 @@
 <% @page_title = "注文情報の入力" %>
 <h1><%= @page_title %></h1>
 
-<%= form_for @order, url: order_path(@order), method: :patch do |form| %>
+<%= form_for @order, url: confirm_path(@order), method: :post  do |form| %>
   配達先住所：<%= form.text_field :address %><br />
   配達希望時間：<%= form.time_select :time, use_month_numbers: true %><br />
   <%= form.submit "確認ボタン" %>
