--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,16 +1,32 @@
-<% @page_title = @order.member.name + "さんのカート内情報" %>
+<% if current_member %>
+  <% @page_title = @order.member.name + "さんのカート内情報" %>
+<% else %>
+  <% @page_title = "カート内情報" %>
+<% end %>
 <h1><%= @page_title %></h1>
-
+<% price = 0 %>
 <% if @order.products.present? %>
   <% @order.products.each do |product| %>
     <h3><%= product.mainmenu.name %></h3>
+    <% price = price + product.mainmenu.price %>
     <% product.toppings.each do |topping| %>
       <p><%= topping.name %></p>
+      <% price = price + topping.price %>
     <% end %>
   <% end %>
 <% else %>
- <p>カートに情報がありません。</p>
+ <p>カートにメインメニューの情報がありません。</p>
 <% end %>
+
+<% if @order.sidemenus.present? %>
+  <% @order.sidemenus.each do |sidemenu| %>
+  <h4><%= sidemenu.name %></h4>
+  <% price = price + sidemenu.price %>
+  <% end %>
+<% end %>
+
+<h4><%= "合計金額" %></h4>
+<h4><%= price %></h4>
 
 <%# <% Product.find_by(id: mainmenu.id).delete %> %>
 <div><%= link_to "注文ボタン", edit_order_path(@order) %></div>
