--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -4,7 +4,7 @@
 
 <div class="toolbar"><%= link_to "削除", @member, method: :delete, data: {confirm: "本当に削除しますか？"} %></div>
 <div class="toolbar"><%= link_to "ログアウト", :session, method: :delete, data: {confirm: "ログアウトしますか？"} %></div>
-<div class="toolbar"><%= link_to "利用履歴", "#" %></div>
+<div class="toolbar"><%= link_to "利用履歴", member_orders_path(@member) %></div>
 
 <%= form_for @member do |form| %>
 <table class="attr">
