--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -3,6 +3,8 @@
 <h1><%= @page_title %></h1>
 
 <h3><%= "注文内容" %></h3>
+
+<% price = 0 %>
 <% @order.products.each do |product| %>
   <p><%= product.mainmenu.name %></p>
   <% price = price + product.mainmenu.price %>
@@ -25,3 +27,15 @@
 
 <h4><%= "配達希望時間" %></h4>
 <h4><%= @order.time %></h4>
+
+<%= form_for @order, method: :get, url: edit_order_path(@order) do |form| %>
+	<%= form.hidden_field :address %>
+	<%= form.hidden_field :time %>
+	<%= form.submit '入力画面に戻る' %>
+<% end %>
+
+<%= form_for @order, method: :post, url: complete_path(@order) do |form| %>
+	<%= form.hidden_field :address %>
+	<%= form.hidden_field :time %>
+	<%= form.submit '送信する' %>
+<% end %>
