レシピ周りのアソシエーションとシードデータ

--- a/app/views/admin/administrators/index.html.erb
+++ b/app/views/admin/administrators/index.html.erb
@@ -5,5 +5,5 @@
 	<li><%= link_to "トッピング一覧", :admin_toppings %></li>
 	<li><%= link_to "メインメニュー一覧", :admin_mainmenus %></li>
   <li><%= link_to "サイドメニュー一覧", :admin_sidemenus %></li>
-	<li><%= link_to "オーダー管理", "#" %></li>
+	<li><%= link_to "オーダー管理", :admin_orders %></li>
 </ul>
