--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -2,6 +2,8 @@
 
 <h1><%= @page_title %></h1>
 
+<h3><%= flash[:notice]%></h3>
+
 <div class="toolbar"><%= link_to "トッピングの追加", edit_product_path(@product) %></div>
 
 <table class="attr">
