--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -3,16 +3,25 @@
 <% else %>
   <% @page_title = "カート内情報" %>
 <% end %>
+
 <h1><%= @page_title %></h1>
+<% "オーダーモデルの合計金額" %>
 <% price = 0 %>
 <% if @order.products.present? %>
   <% @order.products.each do |product| %>
+    <% "プロダクトモデルの合計金額"%>
+    <% price1 = 0 %>
     <h3><%= product.mainmenu.name %></h3>
     <% price = price + product.mainmenu.price %>
+    <% price1 = price1 + product.mainmenu.price %>
     <% product.toppings.each do |topping| %>
       <p><%= topping.name %></p>
       <% price = price + topping.price %>
+      <% price1 = price1 + topping.price %>
     <% end %>
+    <% @product = Product.find(product.id) %>
+    <% @product.price = price1 %>
+    <% @product.save %>
   <% end %>
 <% else %>
  <p>カートにメインメニューの情報がありません。</p>
@@ -27,6 +36,7 @@
 
 <h4><%= "合計金額" %></h4>
 <h4><%= price %></h4>
+
 
 <%# <% Product.find_by(id: mainmenu.id).delete %> %>
 <div><%= link_to "注文ボタン", edit_order_path(@order) %></div>
