--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -54,3 +54,4 @@
 <div><%= link_to "注文ボタン", edit_order_path(@order) %></div>
 
 <div><%= link_to "<<メインメニュー一覧へ", mainmenus_path %></div>
+<div><%= link_to "<<サイドメニュー一覧へ", sidemenus_path %></div>
