--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -64,4 +64,4 @@
 
 <%# <%= link_to "カートへ追加", edit_order_product_path(@order, @product) %> %>
 
-<div><%= link_to "<<商品一覧へ", mainmenus_path %></div>
+<div><%= link_to "<<メインメニュー一覧へ", mainmenus_path %></div>
