--- a/app/views/sidemenus/show.html.erb
+++ b/app/views/sidemenus/show.html.erb
@@ -47,4 +47,4 @@
 
 <%= link_to "カートへ追加", edit_order_sidemenu_path(@order, @sidemenu) %>
 
-<div class="toolbar"><%= link_to "<<商品一覧に戻る", mainmenus_path %></div>
+<div class="toolbar"><%= link_to "<<サイドメニュー一覧に戻る", sidemenus_path %></div>
