--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -24,7 +24,8 @@
 <% end %>
 
 <ul>
-	<li><%= link_to "商品一覧", mainmenus_path %></li>
+	<li><%= link_to "メインメニュー一覧", mainmenus_path %></li>
+  <li><%= link_to "サイドメニュー一覧", sidemenus_path %></li>
   <% unless current_member %>
     <% if Order.find_by(member_id: 100, cart: false).present? %>
       <% @order = Order.find_by(member_id: 100, cart: false) %>
