注文情報のバリデーション

--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -15,8 +15,8 @@
     <td><%= form.text_field :password %></td>
   </tr>
   <tr>
-    <th><%= form.label :adress, "住所" %></th>
-    <td><%= form.text_field :adress %></td>
+    <th><%= form.label :address, "住所" %></th>
+    <td><%= form.text_field :address %></td>
   </tr>
   <tr>
     <th><%= form.label :email, "メールアドレス" %></th>
