--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,6 +1,8 @@
 <% @page_title = "注文情報の入力" %>
 <h1><%= @page_title %></h1>
 
+<%= render "shared/errors", obj: @order %>
+
 <h3><%= flash[:notice]%></h3>
 
 <%= form_for @order, url: confirm_path(@order), method: :post  do |form| %>
