--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,9 @@
   <% "ログインしているけどカートを保持していない人" %>
   <% else %>
     <% @order = Order.new %>
-    <% @order.member = current_member %>
+    <% @member = Member.find(current_member.id) %>
+    <% @order.member = @member %>
+    <% @order.address = @member.address %>
     <% @order.save! %>
   <% end %>
 <% else %>
