管理者側のバリデーション

--- a/app/views/admin/administrators/index.html.erb
+++ b/app/views/admin/administrators/index.html.erb
@@ -1,9 +1,15 @@
 <h2>管理者ページ</h2>
 
 <ul>
-	<li><%= link_to "会員一覧", :admin_members %></li>
-	<li><%= link_to "トッピング一覧", :admin_toppings %></li>
-	<li><%= link_to "メインメニュー一覧", :admin_mainmenus %></li>
-  <li><%= link_to "サイドメニュー一覧", :admin_sidemenus %></li>
-	<li><%= link_to "オーダー管理", :admin_orders %></li>
+	<% if current_administrator %>
+		<li><%= link_to "会員一覧", :admin_members %></li>
+		<li><%= link_to "トッピング一覧", :admin_toppings %></li>
+		<li><%= link_to "レシピ一覧", :admin_recipes %></li>
+		<li><%= link_to "メインメニュー一覧", :admin_mainmenus %></li>
+  	<li><%= link_to "サイドメニュー一覧", :admin_sidemenus %></li>
+		<li><%= link_to "オーダー管理", :admin_orders %></li>
+		<li><%= link_to "ログアウト", :admin_session, method: :delete, data: {confirm: "ログアウトしますか？"} %></li>
+	<% else %>
+		<li><%= link_to "ログイン", :admin_root %></li>
+	<% end %>
 </ul>
