--- a/app/views/admin/mainmenus/index.html.erb
+++ b/app/views/admin/mainmenus/index.html.erb
@@ -1,6 +1,8 @@
 <% @page_title = "メインメニュー一覧" %>
 <h1><%= @page_title %></h1>
 
+<%= render "shared/errors", obj: @mainmenu %>
+
 <% if @mainmenus.present? %>
   <table class="list">
     <thead>
@@ -34,10 +36,6 @@
   <tr>
     <th><%= form.label :price, "値段" %></th>
     <td><%= form.text_field :price %></td>
-  </tr>
-  <tr>
-    <th><% options = ["Sサイズ", 0], ["Mサイズ", 1], ["Lサイズ", 2]%><%= form.label :size, "サイズ" %></th>
-    <td><%= form.select :size, options %></td>
   </tr>
   <tr>
     <th>おすすめ</th>
