--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -19,7 +19,7 @@
   </tr>
   <tr>
     <th>住所</th>
-    <td><%= @member.adress %></td>
+    <td><%= @member.address %></td>
   </tr>
   <tr>
     <th>メールアドレス</th>
