--- a/app/views/admin/sidemenus/index.html.erb
+++ b/app/views/admin/sidemenus/index.html.erb
@@ -1,6 +1,8 @@
 <% @page_title = "サイドメニュー一覧" %>
 <h1><%= @page_title %></h1>
 
+<%= render "shared/errors", obj: @sidemenu %>
+
 <% if @sidemenus.present? %>
   <table class="list">
     <thead>
@@ -36,15 +38,15 @@
     <td><%= form.text_field :price %></td>
   </tr>
   <tr>
-    <th><% options = ["Sサイズ", 0], ["Mサイズ", 1], ["Lサイズ", 2]%><%= form.label :size, "サイズ" %></th>
-    <td><%= form.select :size, options %></td>
-  </tr>
-  <tr>
     <th>おすすめ</th>
     <td>
       <%= form.check_box :recommend %>
       <%= form.label :recommend, "おすすめ" %>
     </td>
+  </tr>
+  <tr>
+    <th><%= form.label :stock, "ストック" %></th>
+    <td><%= form.text_field :stock %></td>
   </tr>
 </table>
 <div><%= form.submit "サイドメニュー新規登録"%></div>
